# e4pix

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  TODO.md  flutter_launcher_icons.yaml  pubspec.yaml
.github/workflows/: build_release.yml  weekly_version_check.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  e4pix_gphoto2_jni.cpp
android/app/src/main/kotlin/com/example/e4pix/: MainActivity.kt
android/app/src/main/kotlin/com/yusuaois/e4pix/: MainActivity.kt
android/app/src/main/kotlin/com/yusuaois/e4pix/camera/: E4pixCameraPlugin.kt  GPhoto2Native.kt  UsbCameraManager.kt
android/app/src/main/res/values/: colors.xml
android/app/src/main/res/xml/: device_filter.xml
assets/translations/: en-US.json  zh-CN.json
e4pix_raw/: .metadata  README.md  ffigen.yaml  pubspec.yaml
e4pix_raw/example/: README.md  pubspec.yaml
e4pix_raw/example/lib/: main.dart
e4pix_raw/example/linux/: CMakeLists.txt
e4pix_raw/example/linux/runner/: my_application.cc
e4pix_raw/example/windows/: CMakeLists.txt
e4pix_raw/example/windows/runner/: Runner.rc  main.cpp
e4pix_raw/lib/: e4pix_raw.dart  e4pix_raw_bindings_generated.dart
e4pix_raw/linux/: CMakeLists.txt
e4pix_raw/src/: CMakeLists.txt  e4pix_raw.c
e4pix_raw/windows/: CMakeLists.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/cache/: raw_cache_cleaner.dart
lib/core/color/: srgb_lut.dart
lib/core/constants/: app_info.dart  lut_formats.dart  raw_formats.dart
lib/core/image/: crop_image.dart
lib/core/lut/: cube_lut.dart
lib/core/models/: adjustment_params.dart  crop_params.dart  hsl_bands.dart  local_adjustment.dart  local_params.dart  mask_shape.dart  rgb_curves.dart  sync_options.dart  tethered_shot.dart  tone_curve.dart
lib/native/: raw_bridge.dart  raw_bridge_bindings.dart
lib/render/: crop_transform.dart  develop_uniforms.dart  exporter.dart  full_pipeline_renderer.dart  mask_cache.dart  preview_renderer.dart  raw_to_ui_image.dart  render_engine.dart
lib/screens/: develop_screen.dart  folder_import_screen.dart  raw_smoke_test_screen.dart  settings_screen.dart
lib/services/: app_settings.dart  lut_library.dart  sam_session.dart  segmentation_service.dart  smart_region_service.dart  tether_watcher.dart  tethered_shot.dart  update_service.dart
lib/services/ai/: ai_color_service.dart  ai_input_renderer.dart  ai_providers.dart  ai_settings.dart
lib/services/camera/: camera_controller.dart  gphoto2_camera_controller.dart  libgphoto2_android_controller.dart
lib/state/: ai_auto_state.dart  app_settings_state.dart  brush_state.dart  camera_state.dart  compare_state.dart  crop_state.dart  curve_state.dart  develop_tool_state.dart  export_state.dart  filter_state.dart  fullscreen_state.dart  history_state.dart  image_state.dart  interaction_state.dart  local_state.dart  lut_library_state.dart  params_state.dart  preset_state.dart  providers.dart  quality_state.dart  render_state.dart  tether_state.dart  theme_state.dart
lib/widgets/: adjustment_panel.dart  ai_settings_dialog.dart  ai_suggestion_dialog.dart  camera_picker_dialog.dart  compare_button.dart  crop_overlay.dart  crop_panel.dart  develop_sections.dart  histogram_panel.dart  local_mask_overlay.dart  local_panel.dart  multi_pass_preview.dart  preset_bar.dart  tether_widgets.dart  theme_color_picker.dart  tracked_slider.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/raw_bridge/: CMakeLists.txt
native/raw_bridge/include/: e4pix_raw.h
native/raw_bridge/src/: e4pix_raw.cpp
scripts/: build_android_libs.sh
shaders/: develop.frag  develop_mask.frag
test/: raw_bridge_smoke_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
